--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hbs": "^4.1.1"
   },
   "devDependencies": {
+    "cypress": "^4.4.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
