--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "author": "Thomas G. aka Drozerah <drozerah@gmail.com> (https://github.com/Drozerah)",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-routes-visualizer": "https://github.com/Drozerah/express-routes-visualizer.git",
-    "hbs": "^4.1.1"
+    "express-session": "^1.17.1",
+    "hbs": "^4.1.1",
+    "i18n-express": "^1.1.3"
   },
   "devDependencies": {
     "cypress": "^4.4.1",
